# webcam-filters

./: README.md  main.py  pyproject.toml  requirements.txt
filters/: dramatic_eye_zoom.py  head_follow.py
tools/: fps.py
