[tool.poetry]
name = "webcam-filters"
version = "0.1.0"
description = ""
authors = ["Maxime Chéramy <maxime@cheramy.org>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5"
pyfakewebcam = "^0.1"
mediapipe = "^0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
